# apollo

./: .gitignore  CHECKSUMS.sha256  CLAUDE.md  Cargo.toml  LICENSE  README.md  Scenarios.md  apollo_logo.txt  blueprint_provider.md  certification_log.txt  control_plane_blueprint.md  enterprise_approval_pack.md  get.apollo.sh  install.sh  pitch.md  provider_integration_guide.md  report.md
.github/workflows/: release.yml
.mars/: agents.json  events.jsonl  hub_nodes.json  instances.json
.mars/certification/node_0/: agents.json  instances.json
.mars/certification/node_1/: agents.json  instances.json
.mars/certification/node_2/: agents.json  instances.json
.mars/certification/node_3/: agents.json  instances.json
.mars/certification/node_3/agents/openclaw/: main.py
.mars/certification/node_4/: agents.json  instances.json
.mars/certification/node_5/: agents.json  instances.json
.mars/certification/node_6/: agents.json  instances.json
.mars/certification/node_7/: agents.json
.mars/certification/node_8/: agents.json  instances.json
.mars/certification/node_9/: agents.json  instances.json
.mars/final_chaos/node_0/: agents.json  instances.json
.mars/final_chaos/node_1/: agents.json  instances.json
.mars/final_chaos/node_2/: agents.json  instances.json
.mars/final_chaos/node_3/: agents.json  instances.json
.mars/final_chaos/node_4/: agents.json  instances.json
.mars/final_chaos/node_5/: agents.json  instances.json
.mars/final_chaos/node_6/: agents.json  instances.json
.mars/final_chaos/node_7/: agents.json  instances.json
.mars/final_chaos/node_7/agents/openclaw/: agent.yaml
.mars/final_chaos/node_8/: agents.json
.mars/final_chaos/node_9/: agents.json  instances.json
crates/apollo-core/: Cargo.toml
crates/apollo-core/src/: agents.rs  detect.rs  fetch.rs  lib.rs  runtime_registry.rs  secrets.rs  types.rs  usage.rs  webhook.rs
crates/apollo-hub/: Cargo.toml
crates/apollo-hub/src/: main.rs
crates/apollo-node/: Cargo.toml
crates/apollo-node/src/: main.rs
crates/apollo-runtime/: Cargo.toml
crates/apollo-runtime/src/: lib.rs  process.rs
crates/mars-core/: Cargo.toml
crates/mars-core/src/: agents.rs  config.rs  lib.rs  license.rs  net.rs  types.rs
crates/mars-core/src/llm/: anthropic.rs  google.rs  mod.rs  models.rs  openai.rs
crates/mars-core/tests/: core_tests.rs
crates/mars-hub/: Cargo.toml
crates/mars-hub/src/: main.rs
crates/mars-node/: Cargo.toml
crates/mars-node/src/: main.rs
crates/mars-runtime/: Cargo.toml
crates/mars-runtime/src/: lib.rs  process.rs
docs/: HANDOFF.md  network_security.md  patch_strategy.md  pilot_feedback_framework.md  production_deployment.md  quick_start.md  sla.md
examples/: hello-agent.yaml
examples/gx-agent/: agent.yaml  main.gx
examples/openclaw/: agent.yaml  main.py
scripts/: long_stress.py  sign_release.sh  stress_test.py
