[workspace]
members = [
    "crates/mars-core",
    "crates/mars-runtime",
    "crates/mars-node",
]
resolver = "2"

# Shared dependency versions across all crates.
[workspace.dependencies]
anyhow      = "1.0"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
tokio       = { version = "1",   features = ["full"] }
reqwest     = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
dialoguer   = "0.11"
lazy_static = "1.4"
which       = "6.0"
sysinfo     = "0.30"
whoami      = "1.5"
sha2        = "0.10"
hmac        = "0.12"
hex         = "0.4"
tiny_http    = "0.12"
async-trait  = "0.1"
