[package]
name = "apollo-hub"
version = "0.1.0"
edition = "2021"

[dependencies]
apollo-core = { path = "../apollo-core" }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tiny_http = "0.12"
async-trait = "0.1"
