[package]
name = "apollo-node"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "apollo"
path = "src/main.rs"

[dependencies]
apollo-core = { path = "../apollo-core" }
apollo-runtime = { path = "../apollo-runtime" }
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
sysinfo = "0.30"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
tiny_http = { workspace = true }
dialoguer = { workspace = true }
