[package]
name = "apollo-runtime"
version = "0.2.0"
edition = "2024"

[dependencies]
apollo-core = { path = "../apollo-core" }
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
sysinfo = "0.30"
serde = { workspace = true }
serde_json = { workspace = true }

# Unix-only: process group management
[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["process", "signal"] }
