[package]
name = "mars-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
mars-core = { path = "../mars-core" }
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
sysinfo = "0.30"
nix = { version = "0.27", features = ["process", "signal"] }
serde = { workspace = true }
serde_json = { workspace = true }
